# estudos-ia

./: .gitignore  readme.md
back-ic/: .gitignore  LICENSE  Makefile  main.py  pyproject.toml  requirements.txt
back-ic/Models/: Models.py  TrainReportRegressor.py
back-ic/cnn_classifier_bird_drone/: params.py
back-ic/cnn_classifier_bird_drone/app/: routes.py
back-ic/cnn_classifier_bird_drone/cnn_classifier/: fine_tune.py  predict.py  preprocess.py  train.py
back-ic/cnn_classifier_cat_lion_tiger/app/: routes.py
back-ic/cnn_classifier_cat_lion_tiger/cnn_classifier/: fine_tune.py  predict.py  preprocess.py  train.py  utils.py
back-ic/cnn_classifier_cat_lion_tiger/tmp/: model.h5
back-ic/database/NVIDIA/: teste.csv
back-ic/fuzzy_c_means_customer/app/: predict.py  routes.py  train.py
back-ic/fuzzy_c_means_customer/modelo/: best_fcm_model.joblib  best_k_and_silhouette_fcm.json  scaler.joblib
back-ic/fuzzy_system_challenge/app/: predict.py  routes.py  train.py
back-ic/fuzzy_system_challenge/modelo/: simulador_fuzzy.pkl
back-ic/k_means_country/app/: routes.py  train.py
back-ic/k_means_country/modelo/: best_k_and_silhouette.json  best_kmeans_model.joblib
back-ic/kohonen_iris/app/: predict.py  routes.py  train.py
back-ic/kohonen_iris/modelo/: scaler.joblib  som_model.joblib
back-ic/kohonen_manual/app/: train.py
back-ic/neuro_fuzzy_challenge/app/: predict.py  routes.py  train.py
back-ic/neuro_fuzzy_challenge/modelo/: anfis_parameters.json  normalization_params.json  training_metrics.json
back-ic/utils/: pre_process.py
front-ic/: next.config.mjs  (+3 more)
(+51 files in other folders)
