[tool.poetry]
name = "back-ic"
version = "0.1.0"
description = "BackEnd para estudos-ia"
authors = ["Pedro Barros <pedrobarros0101@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
