[tool.poetry]
name = "back-ic"
version = "0.1.0"
description = "BackEnd para estudos-ia"
authors = ["Pedro Barros <pedrobarros0101@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
fastapi = {extras = ["standard"], version = "^0.115.2"}
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
numpy = "^1.26.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
tensorflow = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
